--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,28 @@
 {
-    "repositories": [{
-        "type": "composer",
-        "url": "https://wpackagist.org"
-    }],
-    "require": {
-        "php": ">=5.4",
-        "composer/installers": "1.*",
-        "google/apiclient": "^2.0.0@RC",
-        "johnpbloch/wordpress": "^4.8"
-    },
-    "extra": {
-        "wordpress-install-dir": "public/wp",
-        "installer-paths": {
-            "public/wp-content/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-            "public/wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
-            "public/wp-content/themes/{$name}/": ["type:wordpress-theme"]
-        }
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
     }
+  ],
+  "require": {
+    "php": ">=5.4",
+    "composer/installers": "1.*",
+    "google/apiclient": "^2.0.0@RC",
+    "johnpbloch/wordpress": "^4.8"
+  },
+  "extra": {
+    "wordpress-install-dir": "public/wp",
+    "installer-paths": {
+      "public/wp-content/mu-plugins/{$name}/": [
+        "type:wordpress-muplugin"
+      ],
+      "public/wp-content/plugins/{$name}/": [
+        "type:wordpress-plugin"
+      ],
+      "public/wp-content/themes/{$name}/": [
+        "type:wordpress-theme"
+      ]
+    }
+  }
 }
